--- a/7ds_challenge/make_eazy_feeds.ipynb
+++ b/7ds_challenge/make_eazy_feeds.ipynb
@@ -285,15 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=166041</i>\n",
-       "<table id=\"table139693053461408\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>zpsec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th><th>F419</th><th>F420</th><th>F421</th><th>F422</th><th>F423</th><th>F424</th><th>F425</th><th>F426</th><th>F427</th><th>F428</th><th>F429</th><th>F430</th><th>F431</th><th>F432</th><th>F433</th><th>F434</th><th>F435</th><th>F436</th><th>F437</th><th>F438</th><th>E419</th><th>E420</th><th>E421</th><th>E422</th><th>E423</th><th>E424</th><th>E425</th><th>E426</th><th>E427</th><th>E428</th><th>E429</th><th>E430</th><th>E431</th><th>E432</th><th>E433</th><th>E434</th><th>E435</th><th>E436</th><th>E437</th><th>E438</th></tr></thead>\n",
+       "<table id=\"table140006918599296\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_spec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th><th>F419</th><th>F420</th><th>F421</th><th>F422</th><th>F423</th><th>F424</th><th>F425</th><th>F426</th><th>F427</th><th>F428</th><th>F429</th><th>F430</th><th>F431</th><th>F432</th><th>F433</th><th>F434</th><th>F435</th><th>F436</th><th>F437</th><th>F438</th><th>E419</th><th>E420</th><th>E421</th><th>E422</th><th>E423</th><th>E424</th><th>E425</th><th>E426</th><th>E427</th><th>E428</th><th>E429</th><th>E430</th><th>E431</th><th>E432</th><th>E433</th><th>E434</th><th>E435</th><th>E436</th><th>E437</th><th>E438</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>12</td><td>23.990103981421147</td><td>0.707</td><td>0.0</td><td>150.47679031</td><td>2.33150699</td><td>0.014723000000000002</td><td>962809</td><td>0.6809810000000001</td><td>0.40049770149460284</td><td>0.5078999488291236</td><td>0.2963054331463698</td><td>0.3335773725294298</td><td>0.09632781075085359</td><td>0.21192752586334654</td><td>0.37209524197826066</td><td>0.29368319984589747</td><td>0.4985870900193809</td><td>0.4046981079202723</td><td>0.3725967722012696</td><td>0.6751451221323529</td><td>0.7335593340776831</td><td>1.0759871857767476</td><td>0.6807956725650958</td><td>1.184172133594535</td><td>0.9488228953306005</td><td>0.5163122176461388</td><td>1.267783441864066</td><td>1.0484799666863904</td><td>0.12772560052432094</td><td>0.11387962045581174</td><td>0.10839052197376808</td><td>0.10817636615811946</td><td>0.10437727725409991</td><td>0.1112288824337841</td><td>0.13267015359507206</td><td>0.13184519400400985</td><td>0.1461283265740689</td><td>0.17801847567707968</td><td>0.16864207043732382</td><td>0.1791378725006872</td><td>0.2072308907717925</td><td>0.2797763431091668</td><td>0.3134661478735132</td><td>0.4545645852922471</td><td>0.5045852615320934</td><td>0.5662332409277782</td><td>0.7237828478570381</td><td>1.0045318576971731</td></tr>\n",
        "<tr><td>27</td><td>24.875468381594267</td><td>0.7751</td><td>0.0</td><td>150.71248825</td><td>1.79210579</td><td>0.018367</td><td>387749</td><td>0.7748600000000001</td><td>0.1555804207561737</td><td>0.23298046022847965</td><td>0.20890100061051156</td><td>0.2425297540900066</td><td>0.13264911732809592</td><td>-0.0433434970476219</td><td>0.35263735305899857</td><td>0.16517200662142031</td><td>0.3326562541108519</td><td>0.3481771377052659</td><td>0.34860829092313544</td><td>0.02851365349579364</td><td>0.008300258547255055</td><td>0.42246510939716175</td><td>0.46133413411519236</td><td>0.14976108017397355</td><td>0.851427575477548</td><td>-0.897450868898974</td><td>0.2007836151573084</td><td>2.190287917569994</td><td>0.12762509466835778</td><td>0.11378978870803297</td><td>0.10830610016743172</td><td>0.1081038162090855</td><td>0.10429418725856796</td><td>0.11114809639838144</td><td>0.1326006719991642</td><td>0.13176752195440508</td><td>0.14605500324842657</td><td>0.17786784737357897</td><td>0.16846603974830524</td><td>0.1789315807075524</td><td>0.20697474783076347</td><td>0.2795536598475472</td><td>0.3132480706679894</td><td>0.45435525020422407</td><td>0.5043646250919653</td><td>0.5659866828358857</td><td>0.7234516116407833</td><td>1.0043847645427422</td></tr>\n",
@@ -320,7 +320,7 @@
       ],
       "text/plain": [
        "<Table length=166041>\n",
-       "  ID       HSC_i_MAG       zpsec  ...        E437               E438       \n",
+       "  ID       HSC_i_MAG       z_spec ...        E437               E438       \n",
        "int64       float64       float64 ...      float64            float64      \n",
        "------ ------------------ ------- ... ------------------ ------------------\n",
        "    12 23.990103981421147   0.707 ... 0.7237828478570381 1.0045318576971731\n",
@@ -346,7 +346,7 @@
        "601307 23.419138966614625  0.9887 ... 0.7239526787501562 1.0048642197988775"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,15 +357,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=10000</i>\n",
-       "<table id=\"table139693054436112\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>zpsec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th><th>F419</th><th>F420</th><th>F421</th><th>F422</th><th>F423</th><th>F424</th><th>F425</th><th>F426</th><th>F427</th><th>F428</th><th>F429</th><th>F430</th><th>F431</th><th>F432</th><th>F433</th><th>F434</th><th>F435</th><th>F436</th><th>F437</th><th>F438</th><th>E419</th><th>E420</th><th>E421</th><th>E422</th><th>E423</th><th>E424</th><th>E425</th><th>E426</th><th>E427</th><th>E428</th><th>E429</th><th>E430</th><th>E431</th><th>E432</th><th>E433</th><th>E434</th><th>E435</th><th>E436</th><th>E437</th><th>E438</th></tr></thead>\n",
+       "<table id=\"table140006918601744\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_spec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th><th>F419</th><th>F420</th><th>F421</th><th>F422</th><th>F423</th><th>F424</th><th>F425</th><th>F426</th><th>F427</th><th>F428</th><th>F429</th><th>F430</th><th>F431</th><th>F432</th><th>F433</th><th>F434</th><th>F435</th><th>F436</th><th>F437</th><th>F438</th><th>E419</th><th>E420</th><th>E421</th><th>E422</th><th>E423</th><th>E424</th><th>E425</th><th>E426</th><th>E427</th><th>E428</th><th>E429</th><th>E430</th><th>E431</th><th>E432</th><th>E433</th><th>E434</th><th>E435</th><th>E436</th><th>E437</th><th>E438</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>738963</td><td>21.103617245014533</td><td>0.6216</td><td>0.0</td><td>150.37386852</td><td>2.5073432</td><td>0.017709000000000003</td><td>1149026</td><td>0.621499</td><td>2.6112547335475473</td><td>2.880827015647063</td><td>3.160543670939539</td><td>3.463803940982909</td><td>4.053598783827961</td><td>4.083686711306581</td><td>4.584210172368202</td><td>4.840942794035633</td><td>5.5103009678999815</td><td>7.041498401813331</td><td>8.252698095892232</td><td>9.369820125607335</td><td>9.905548836387496</td><td>11.198232063729364</td><td>12.000284219987202</td><td>11.928226634204313</td><td>14.883394175130066</td><td>14.092583818552985</td><td>14.444636249893238</td><td>16.073252786167917</td><td>0.13081352218667033</td><td>0.11817044949772083</td><td>0.11332117545091479</td><td>0.11422429288378155</td><td>0.11150009635951957</td><td>0.11870593904875958</td><td>0.1407258408619308</td><td>0.14070954157364457</td><td>0.1572242157892294</td><td>0.19155481187477152</td><td>0.189613925199004</td><td>0.20481156422405614</td><td>0.23172283068430174</td><td>0.30362998470967656</td><td>0.34035953083562187</td><td>0.4759623497362729</td><td>0.5301821000838206</td><td>0.5884940597372528</td><td>0.7420255058992078</td><td>1.0206752601973432</td></tr>\n",
        "<tr><td>715464</td><td>24.377794723854887</td><td>2.8899</td><td>0.0</td><td>149.88668403</td><td>2.68432357</td><td>0.016769000000000003</td><td>1329160</td><td>2.897937</td><td>0.12151598926336958</td><td>0.3584347201955358</td><td>0.34733388829890327</td><td>0.5020661762557931</td><td>0.6328735585973589</td><td>0.5624087072335401</td><td>0.6242182920296966</td><td>0.6317265235773546</td><td>0.8703685142797455</td><td>0.6735055083475647</td><td>0.6820923757788929</td><td>0.6711097666622994</td><td>0.36135658886955546</td><td>0.7425879604192497</td><td>0.8094518172128994</td><td>0.080562110864082</td><td>1.0814976051164957</td><td>1.6565899729294236</td><td>0.4182443407641414</td><td>1.6563452546260182</td><td>0.1276735282700148</td><td>0.11386503800816561</td><td>0.10837556915229639</td><td>0.10821105381240785</td><td>0.10450832704019142</td><td>0.11137588868342073</td><td>0.13277876519430787</td><td>0.1319900871500606</td><td>0.14623050375575822</td><td>0.1780484914337715</td><td>0.16865507251109776</td><td>0.1791035677640766</td><td>0.20713651332271157</td><td>0.2796597971890184</td><td>0.3133472094030086</td><td>0.4544160323777001</td><td>0.5044138041437072</td><td>0.5660274983395606</td><td>0.7234725201698244</td><td>1.0043693898512953</td></tr>\n",
@@ -392,7 +392,7 @@
       ],
       "text/plain": [
        "<Table length=10000>\n",
-       "  ID       HSC_i_MAG       zpsec  ...        E437               E438       \n",
+       "  ID       HSC_i_MAG       z_spec ...        E437               E438       \n",
        "int64       float64       float64 ...      float64            float64      \n",
        "------ ------------------ ------- ... ------------------ ------------------\n",
        "738963 21.103617245014533  0.6216 ... 0.7420255058992078 1.0206752601973432\n",
@@ -418,7 +418,7 @@
        "245582  23.94221326158533  1.4465 ... 0.7236646924271871  1.004563929000131"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
