fixing fatal mistake

--- a/7ds_challenge/make_eazy_filtres.ipynb
+++ b/7ds_challenge/make_eazy_filtres.ipynb
@@ -2,15 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote </data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/FILTER.RES+7DT.res[.info]>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/4000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/4250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/4500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/4750_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/5000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/5250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/5500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/5750_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/6000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/6250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/6500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/6750_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/7000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/7250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/7500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/7750_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/8000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/8250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/8500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/8750_fitted.csv')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -24,7 +46,24 @@
     "WD = Path.cwd()\n",
     "FILTERDIR = WD / \"7DT_filters_v2\"\n",
     "filtpaths = list(FILTERDIR.glob(\"*.csv\"))\n",
-    "\n",
+    "filtpaths.sort()\n",
+    "filtpaths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote </data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/FILTER.RES+7DT.res[.info]>\n"
+     ]
+    }
+   ],
+   "source": [
     "path_default_filter = Path(path_to_eazy_data()) / \"FILTER.RES.latest\"\n",
     "\n",
     "path_output_filter = WD / \"FILTER.RES+7DT.res\"\n",
@@ -61,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.-1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
