major bugfix - allocate correctly

--- a/7ds_challenge/make_eazy_feeds.ipynb
+++ b/7ds_challenge/make_eazy_feeds.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4255.1512304174685"
+       "4013.565472569176"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "       431, 432, 433, 434, 435, 436, 437])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "       432, 433, 434, 435, 436, 437, 438])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,14 +164,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['7DT_4000_fitted lambda_c= 4.0136e+03 AB-Vega= -0.048 w95=237.4',\n",
+       "       '7DT_4250_fitted lambda_c= 4.2552e+03 AB-Vega= -0.146 w95=234.2',\n",
+       "       '7DT_4500_fitted lambda_c= 4.5079e+03 AB-Vega= -0.178 w95=247.0',\n",
+       "       '7DT_4750_fitted lambda_c= 4.7528e+03 AB-Vega= -0.076 w95=231.1',\n",
+       "       '7DT_5000_fitted lambda_c= 5.0027e+03 AB-Vega= -0.056 w95=260.3',\n",
+       "       '7DT_5250_fitted lambda_c= 5.2485e+03 AB-Vega= -0.029 w95=241.3',\n",
+       "       '7DT_5500_fitted lambda_c= 5.5009e+03 AB-Vega= 0.016 w95=250.6',\n",
+       "       '7DT_5750_fitted lambda_c= 5.7488e+03 AB-Vega= 0.061 w95=240.3',\n",
+       "       '7DT_6000_fitted lambda_c= 6.0010e+03 AB-Vega= 0.109 w95=255.1',\n",
+       "       '7DT_6250_fitted lambda_c= 6.2478e+03 AB-Vega= 0.155 w95=237.0',\n",
+       "       '7DT_6500_fitted lambda_c= 6.5008e+03 AB-Vega= 0.255 w95=253.3',\n",
+       "       '7DT_6750_fitted lambda_c= 6.7447e+03 AB-Vega= 0.243 w95=252.8',\n",
+       "       '7DT_7000_fitted lambda_c= 6.9991e+03 AB-Vega= 0.284 w95=241.5',\n",
+       "       '7DT_7250_fitted lambda_c= 7.2464e+03 AB-Vega= 0.326 w95=248.4',\n",
+       "       '7DT_7500_fitted lambda_c= 7.4887e+03 AB-Vega= 0.366 w95=245.2',\n",
+       "       '7DT_7750_fitted lambda_c= 7.7526e+03 AB-Vega= 0.409 w95=241.3',\n",
+       "       '7DT_8000_fitted lambda_c= 7.9921e+03 AB-Vega= 0.446 w95=250.0',\n",
+       "       '7DT_8250_fitted lambda_c= 8.2396e+03 AB-Vega= 0.482 w95=277.7',\n",
+       "       '7DT_8500_fitted lambda_c= 8.4829e+03 AB-Vega= 0.529 w95=286.8',\n",
+       "       '7DT_8750_fitted lambda_c= 8.7284e+03 AB-Vega= 0.527 w95=273.2'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(filt_latest_7dt.filters)[ids_7dt]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=166041</i>\n",
-       "<table id=\"table140006318894432\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140473401048080\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_spec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th></tr></thead>\n",
        "<tr><td>12</td><td>23.990103981421147</td><td>0.707</td><td>0.0</td><td>150.47679031</td><td>2.33150699</td><td>0.014723000000000002</td><td>962809</td><td>0.6809810000000001</td></tr>\n",
@@ -225,7 +265,7 @@
        "601307 23.419138966614625  0.9887 ...  517960  0.9661940000000001"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=166041</i>\n",
-       "<table id=\"table140006918599296\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140474147420816\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_spec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th><th>F419</th><th>F420</th><th>F421</th><th>F422</th><th>F423</th><th>F424</th><th>F425</th><th>F426</th><th>F427</th><th>F428</th><th>F429</th><th>F430</th><th>F431</th><th>F432</th><th>F433</th><th>F434</th><th>F435</th><th>F436</th><th>F437</th><th>F438</th><th>E419</th><th>E420</th><th>E421</th><th>E422</th><th>E423</th><th>E424</th><th>E425</th><th>E426</th><th>E427</th><th>E428</th><th>E429</th><th>E430</th><th>E431</th><th>E432</th><th>E433</th><th>E434</th><th>E435</th><th>E436</th><th>E437</th><th>E438</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>12</td><td>23.990103981421147</td><td>0.707</td><td>0.0</td><td>150.47679031</td><td>2.33150699</td><td>0.014723000000000002</td><td>962809</td><td>0.6809810000000001</td><td>0.40049770149460284</td><td>0.5078999488291236</td><td>0.2963054331463698</td><td>0.3335773725294298</td><td>0.09632781075085359</td><td>0.21192752586334654</td><td>0.37209524197826066</td><td>0.29368319984589747</td><td>0.4985870900193809</td><td>0.4046981079202723</td><td>0.3725967722012696</td><td>0.6751451221323529</td><td>0.7335593340776831</td><td>1.0759871857767476</td><td>0.6807956725650958</td><td>1.184172133594535</td><td>0.9488228953306005</td><td>0.5163122176461388</td><td>1.267783441864066</td><td>1.0484799666863904</td><td>0.12772560052432094</td><td>0.11387962045581174</td><td>0.10839052197376808</td><td>0.10817636615811946</td><td>0.10437727725409991</td><td>0.1112288824337841</td><td>0.13267015359507206</td><td>0.13184519400400985</td><td>0.1461283265740689</td><td>0.17801847567707968</td><td>0.16864207043732382</td><td>0.1791378725006872</td><td>0.2072308907717925</td><td>0.2797763431091668</td><td>0.3134661478735132</td><td>0.4545645852922471</td><td>0.5045852615320934</td><td>0.5662332409277782</td><td>0.7237828478570381</td><td>1.0045318576971731</td></tr>\n",
@@ -346,7 +386,7 @@
        "601307 23.419138966614625  0.9887 ... 0.7239526787501562 1.0048642197988775"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=10000</i>\n",
-       "<table id=\"table140006918601744\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140473401404624\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_spec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th><th>F419</th><th>F420</th><th>F421</th><th>F422</th><th>F423</th><th>F424</th><th>F425</th><th>F426</th><th>F427</th><th>F428</th><th>F429</th><th>F430</th><th>F431</th><th>F432</th><th>F433</th><th>F434</th><th>F435</th><th>F436</th><th>F437</th><th>F438</th><th>E419</th><th>E420</th><th>E421</th><th>E422</th><th>E423</th><th>E424</th><th>E425</th><th>E426</th><th>E427</th><th>E428</th><th>E429</th><th>E430</th><th>E431</th><th>E432</th><th>E433</th><th>E434</th><th>E435</th><th>E436</th><th>E437</th><th>E438</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>738963</td><td>21.103617245014533</td><td>0.6216</td><td>0.0</td><td>150.37386852</td><td>2.5073432</td><td>0.017709000000000003</td><td>1149026</td><td>0.621499</td><td>2.6112547335475473</td><td>2.880827015647063</td><td>3.160543670939539</td><td>3.463803940982909</td><td>4.053598783827961</td><td>4.083686711306581</td><td>4.584210172368202</td><td>4.840942794035633</td><td>5.5103009678999815</td><td>7.041498401813331</td><td>8.252698095892232</td><td>9.369820125607335</td><td>9.905548836387496</td><td>11.198232063729364</td><td>12.000284219987202</td><td>11.928226634204313</td><td>14.883394175130066</td><td>14.092583818552985</td><td>14.444636249893238</td><td>16.073252786167917</td><td>0.13081352218667033</td><td>0.11817044949772083</td><td>0.11332117545091479</td><td>0.11422429288378155</td><td>0.11150009635951957</td><td>0.11870593904875958</td><td>0.1407258408619308</td><td>0.14070954157364457</td><td>0.1572242157892294</td><td>0.19155481187477152</td><td>0.189613925199004</td><td>0.20481156422405614</td><td>0.23172283068430174</td><td>0.30362998470967656</td><td>0.34035953083562187</td><td>0.4759623497362729</td><td>0.5301821000838206</td><td>0.5884940597372528</td><td>0.7420255058992078</td><td>1.0206752601973432</td></tr>\n",
@@ -418,7 +458,7 @@
        "245582  23.94221326158533  1.4465 ... 0.7236646924271871  1.004563929000131"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +478,7 @@
        "0.016577"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +498,7 @@
        "0.9537718931591848"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
