--- a/7ds_challenge/run.ipynb
+++ b/7ds_challenge/run.ipynb
@@ -132,7 +132,7 @@
     "        lnpgrid = np.dot(np.ones_like(zgrid)[:,None], lnp[i][None,:])\n",
     "        zlim = zzgrid >= zgrid\n",
     "        h = np.zeros_like(zgrid)\n",
-    "        h[zgrid >= zspec[0]] = 1\n",
+    "        h[zgrid >= zspec[i]] = 1\n",
     "        pit = np.dot(np.exp(lnpgrid)*zlim, trdz)\n",
     "        crps[i] = np.dot((pit-h)**2, trdz)\n",
     "    \n",
