--- a/7ds_challenge/run.ipynb
+++ b/7ds_challenge/run.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
     "    incatpath = Path(params['CATALOG_FILE'])\n",
     "    base = Table.read(incatpath)\n",
     "    \n",
-    "    colnames = ['z_phot', 'z_phot_chi2', 'z160', 'z840', 'id']\n",
+    "    colnames = ['z_phot', 'z_phot_chi2', 'z160', 'z840', 'pit', 'crps', 'id']\n",
     "    for label in colnames:\n",
     "        base[label] = np.empty(len(base), dtype=float)\n",
     "        \n",
@@ -2240,6 +2240,78 @@
     }
    ],
    "source": [
+    "fit_and_save_result_prior(params_RIS, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0th batch already exists ==============\n",
+      "1th batch already exists ==============\n",
+      "2th batch already exists ==============\n",
+      "3th batch already exists ==============\n",
+      "4th batch already exists ==============\n",
+      "5th batch already exists ==============\n",
+      "6th batch already exists ==============\n",
+      "7th batch already exists ==============\n",
+      "8th batch already exists ==============\n",
+      "9th batch already exists ==============\n",
+      "10th batch already exists ==============\n",
+      "11th batch already exists ==============\n",
+      "12th batch already exists ==============\n",
+      "13th batch already exists ==============\n",
+      "14th batch already exists ==============\n",
+      "15th batch already exists ==============\n",
+      "16th batch already exists ==============\n",
+      "Finished in 00:00:03\n",
+      "0th batch already exists ==============\n",
+      "1th batch already exists ==============\n",
+      "2th batch already exists ==============\n",
+      "3th batch already exists ==============\n",
+      "4th batch already exists ==============\n",
+      "5th batch already exists ==============\n",
+      "6th batch already exists ==============\n",
+      "7th batch already exists ==============\n",
+      "8th batch already exists ==============\n",
+      "9th batch already exists ==============\n",
+      "10th batch already exists ==============\n",
+      "11th batch already exists ==============\n",
+      "12th batch already exists ==============\n",
+      "13th batch already exists ==============\n",
+      "14th batch already exists ==============\n",
+      "15th batch already exists ==============\n",
+      "16th batch already exists ==============\n",
+      "Finished in 00:00:03\n",
+      "0th batch already exists ==============\n",
+      "1th batch already exists ==============\n",
+      "2th batch already exists ==============\n",
+      "3th batch already exists ==============\n",
+      "4th batch already exists ==============\n",
+      "5th batch already exists ==============\n",
+      "6th batch already exists ==============\n",
+      "7th batch already exists ==============\n",
+      "8th batch already exists ==============\n",
+      "9th batch already exists ==============\n",
+      "10th batch already exists ==============\n",
+      "11th batch already exists ==============\n",
+      "12th batch already exists ==============\n",
+      "13th batch already exists ==============\n",
+      "14th batch already exists ==============\n",
+      "15th batch already exists ==============\n",
+      "16th batch already exists ==============\n",
+      "Finished in 00:00:03\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit_and_save_result_prior(params_IMS, tempfilt)\n",
+    "fit_and_save_result_prior(params_WFS, tempfilt)\n",
     "fit_and_save_result_prior(params_RIS, tempfilt)"
    ]
   }
